Master - added readme

--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
-  "name": "zoinedapi",
+  "name": "zoined_api",
   "version": "0.0.1",
   "description": "Handles posting data to zoined api, with validation",
   "main": "app.js",
   "scripts": {
-    "test": "nyc --reporter=lcov --report-dir=public/coverage  mocha"
+    "test": "nyc --reporter=lcov --report-dir=public/coverage  mocha",
+    "md": "mos",
+    "?md": "echo \"Update the markdown files\""
   },
   "dependencies": {
     "request": "^2.83.0",
@@ -14,11 +16,16 @@
     "babel-preset-env": "^1.6.1",
     "chai": "^4.1.2",
     "mocha": "3.0.0-2",
+    "mos": "^1.3.1",
     "nyc": "^11.4.1"
   },
   "keywords": [
     "Zoined"
   ],
   "author": "Dave Grix",
-  "license": "MIT"
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Pavers/ZoinedAPIUploader"
+  }
 }
