--- a/.eslintrc
+++ b/.eslintrc
@@ -13,7 +13,7 @@
     "es6": true
   },
   "plugins": [
-    "mocha"
+    //"mocha"
     //"react"
   ],
   "parserOptions": {
@@ -48,7 +48,7 @@
         "function": { "before": false }
       }
     }],
-    "mocha/no-exclusive-tests": 2,
+    //"mocha/no-exclusive-tests": 2,
     "new-cap": [2, {"capIsNewExceptions": ["jQuery.Event", "$.Event", "$.Deferred"]}],
     "new-parens": 2,
     "no-alert": 2,
